# toni-rs

./: Cargo.toml  README.md
examples/: Cargo.toml  README.md  config_module.rs  custom_extractors.rs  error_handling.rs  error_handling_and_builder.rs  gateway_http_bridge.rs  graceful_shutdown.rs  hello_world.rs  lifecycle_hooks.rs  logging.rs  middleware_examples.rs  multi_protocol_context.rs  pipes_complete_guide.rs  provider_patterns.rs  route_metadata.rs  rpc_controller.rs  rpc_nats.rs  rpc_nats_client.rs  websocket_basic.rs  websocket_chat.rs  websocket_di.rs  websocket_rooms.rs
integration-tests/: Cargo.toml
integration-tests/tests/: app_token_enhancers.rs  async_controllers.rs  attribute_extractors.rs  attribute_syntax.rs  concurrent_scope.rs  config_injection.rs  constructor_param_inject.rs  constructor_patterns.rs  controller_consolidated.rs  controller_constructor_di.rs  controller_scopes.rs  custom_init.rs  di_core.rs  di_providers.rs  di_validation.rs  enhancers.rs  enhancers_combined.rs  enhancers_di.rs  error_handler.rs  extensions_and_from_request.rs  extractors.rs  global_enhancers.rs  global_modules.rs  graceful_shutdown.rs  http_e2e.rs  lifecycle_hooks.rs  middleware_error.rs  module_ref.rs  modules.rs  multi_providers.rs  owned_fields.rs  provide_macro.rs  provider_scope.rs  request_extractor.rs  request_provider.rs  scope_bubbling.rs  scope_validation.rs  static_methods.rs  streaming.rs  tower_compat.rs  (+3 more)
integration-tests/tests/common/: mod.rs  server.rs  tracker.rs
integration-tests/tests/integration/: app_token_enhancers.rs  async_controllers.rs  attribute_extractors.rs  attribute_syntax.rs  concurrent_scope.rs  config_injection.rs  constructor_patterns.rs  di_core.rs  di_providers.rs  di_validation.rs  enhancers.rs  enhancers_di.rs  error_handler.rs  extensions_and_from_request.rs  extractors.rs  global_enhancers.rs  global_modules.rs  graceful_shutdown.rs  http_e2e.rs  lifecycle_hooks.rs  main.rs  middleware_error.rs  module_ref.rs  modules.rs  multi_providers.rs  owned_fields.rs  provide_macro.rs  provider_scope.rs  request_extractor.rs  request_provider.rs  scope_bubbling.rs  static_methods.rs  streaming.rs  tower_compat.rs  websocket_broadcast.rs  websocket_e2e.rs
toni/: Cargo.toml  README.md  TOWER_COMPAT.md
toni-actix/: Cargo.toml
toni-actix/src/: actix_adapter.rs  actix_route_adapter.rs  lib.rs
toni-actix/tests/: integration_test.rs
toni-async-graphql/: Cargo.toml  README.md
toni-async-graphql/examples/: hello_world.rs  with_auth.rs
toni-async-graphql/src/: context_builder.rs  graphql_controller.rs  graphql_module.rs  graphql_service.rs  graphql_service_factory.rs  graphql_service_manager.rs  lib.rs
toni-axum/: Cargo.toml
toni-axum/src/: axum_adapter.rs  axum_route_adapter.rs  axum_websocket_adapter.rs  lib.rs  tokio_sender.rs
toni-axum/tests/: integration_test.rs
toni-config/: Cargo.toml
toni-config/src/: config_service.rs  lib.rs
toni-juniper/: Cargo.toml  README.md
toni-juniper/examples/: hello_world.rs  with_auth.rs
toni-juniper/src/: context_builder.rs  graphql_controller.rs  graphql_module.rs  graphql_service.rs  graphql_service_factory.rs  graphql_service_manager.rs  lib.rs
toni-macros/: Cargo.toml
toni-macros/src/: lib.rs
toni-macros/src/controller_macro/: controller_consolidated.rs  controller_struct.rs  extractor_params.rs  instance_injection.rs  mod.rs
toni-macros/src/enhancer/: enhancer.rs  mod.rs
toni-macros/src/gateway_macro/: gateway_impl.rs  mod.rs
toni-macros/src/markers_params/: extracts_marker_params.rs  get_marker_params.rs  remove_marker_controller_fn.rs
toni-macros/src/middleware_macro/: middleware_struct.rs
toni-macros/src/module_macro/: module_struct.rs
toni-macros/src/provider_macro/: instance_injection.rs  provider_struct.rs
toni-macros/src/provider_variants/: alias_provider.rs  factory_provider.rs  mod.rs  multi_provider.rs  token_provider.rs  unified_provide.rs  value_provider.rs
toni-macros/src/rpc_macro/: mod.rs  rpc_impl.rs
toni-macros/src/shared/: enhancer_markers.rs  lifecycle_hooks.rs  mod.rs  scope_parser.rs  token_parser.rs
toni-macros/src/utils/: controller_utils.rs  extracts.rs
toni-nats/: Cargo.toml
toni-nats/src/: lib.rs  nats_adapter.rs  nats_client_transport.rs  servers.rs
toni-seaorm/: Cargo.toml
toni-seaorm/src/: connection.rs  lib.rs  module.rs
toni-tcp/: Cargo.toml
toni-tcp/src/: lib.rs  tcp_adapter.rs  tcp_client_transport.rs
toni-tungstenite/: Cargo.toml
toni-tungstenite/src/: adapter.rs  lib.rs  ws_socket.rs
toni/src/: application_context.rs  builtin_module.rs  lib.rs  lifecycle_hooks.rs  provider_scope.rs  request.rs  scanner.rs  toni_application.rs  toni_factory.rs  tower_compat.rs
toni/src/adapter/: http_adapter.rs  mod.rs  route_adapter.rs  rpc_adapter.rs  rpc_client_transport.rs  websocket_adapter.rs
toni/src/errors/: http_error.rs  mod.rs
toni/src/extractors/: body.rs  body_stream.rs  bytes.rs  json.rs  mod.rs  path.rs  query.rs  validated.rs
toni/src/http_helpers/: body.enum.rs  http_request.struct.rs  http_response.enum.rs  into_response.rs  mod.rs  path_params.rs  request_body.rs  route_metadata.rs
toni/src/injector/: container.rs  context.rs  dependency_graph.rs  gateway_resolver.rs  instance_loader.rs  instance_wrapper.rs  mod.rs  module.rs  module_ref.rs  module_ref_provider.rs  multi_collection_provider.rs  protocol.rs  protocol_context.rs  rpc_controller_resolver.rs  token.rs
toni/src/middleware/: chain.rs  mod.rs  module_middleware.rs
toni/src/module_helpers/: dynamic_module.rs  mod.rs
toni/src/router/: routes_resolve.rs
toni/src/rpc/: clients_module.rs  mod.rs  rpc_client.rs  rpc_client_error.rs  rpc_context.rs  rpc_controller_trait.rs  rpc_controller_wrapper.rs  rpc_data.rs  rpc_error.rs
toni/src/structs_helpers/: enhancer.rs
toni/src/traits_helpers/: controller.rs  error_handler.rs  interceptor.rs  middleware.rs  mod.rs  module_metadata.rs  provider.rs  provider_context.rs  request_cache.rs
toni/src/websocket/: broadcast.rs  broadcast_module.rs  broadcast_provider.rs  gateway_trait.rs  (+10 more)
(+9 files in other folders)
