[workspace]
resolver = "3"
members = [
    "toni",
    "toni-macros",
    "toni-cli",
    "toni-axum",
    "toni-tcp",
    "toni-nats",
    "toni-tungstenite",
    "toni-actix",
    "toni-config",
    "toni-seaorm",
    "toni-async-graphql",
    "toni-juniper",
    "integration-tests",
    "examples",
]
