[package]
name = "toni-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
toni = { path = "../toni" }
toni-macros = { path = "../toni-macros" }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
toni-axum = { path = "../toni-axum" }
chrono = "0.4"
anyhow = "1.0"

[[example]]
name = "pipes_complete_guide"
path = "pipes_complete_guide.rs"

[[example]]
name = "middleware_examples"
path = "middleware_examples.rs"

[[example]]
name = "error_handling"
path = "error_handling.rs"

[[example]]
name = "custom_extractors"
path = "custom_extractors.rs"

[[example]]
name = "route_metadata"
path = "route_metadata.rs"

[[example]]
name = "provider_patterns"
path = "provider_patterns.rs"

[[example]]
name = "multi_protocol_context"
path = "multi_protocol_context.rs"

[[example]]
name = "lifecycle_hooks"
path = "lifecycle_hooks.rs"

[[example]]
name = "websocket_basic"
path = "websocket_basic.rs"

[[example]]
name = "websocket_chat"
path = "websocket_chat.rs"
