[package]
name = "toni-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
toni = { path = "../toni" }
toni-macros = { path = "../toni-macros" }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
toni-axum = { path = "../toni-axum" }
toni-config = { path = "../toni-config" }
toni-tcp = { path = "../toni-tcp" }
toni-nats = { path = "../toni-nats" }
chrono = "0.4"
anyhow = "1.0"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "config_module"
path = "config_module.rs"

[[example]]
name = "pipes_complete_guide"
path = "pipes_complete_guide.rs"

[[example]]
name = "middleware_examples"
path = "middleware_examples.rs"

[[example]]
name = "error_handling"
path = "error_handling.rs"

[[example]]
name = "custom_extractors"
path = "custom_extractors.rs"

[[example]]
name = "route_metadata"
path = "route_metadata.rs"

[[example]]
name = "provider_patterns"
path = "provider_patterns.rs"

[[example]]
name = "multi_protocol_context"
path = "multi_protocol_context.rs"

[[example]]
name = "lifecycle_hooks"
path = "lifecycle_hooks.rs"

[[example]]
name = "websocket_chat"
path = "websocket_chat.rs"

[[example]]
name = "websocket_di"
path = "websocket_di.rs"

[[example]]
name = "websocket_rooms"
path = "websocket_rooms.rs"

[[example]]
name = "graceful_shutdown"
path = "graceful_shutdown.rs"

[[example]]
name = "rpc_controller"
path = "rpc_controller.rs"

[[example]]
name = "rpc_nats"
path = "rpc_nats.rs"

[[example]]
name = "rpc_nats_client"
path = "rpc_nats_client.rs"
