[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# This crate exists purely for integration testing across the Toni framework.
# It depends on all components to test their interactions.

[dependencies]
toni = { path = "../toni", features = ["tower-compat"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "set-header", "compression-gzip"] }
http = "1"
toni-config = { path = "../toni-config" }
toni-macros = { path = "../toni-macros" }
toni-axum = { path = "../toni-axum" }
toni-tungstenite = { path = "../toni-tungstenite" }

# Testing dependencies
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2.0"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.11", features = ["v4"] }
tokio_localset_test = { git = "https://github.com/ifeanyi-ugwu/tokio_localset_test.git", rev = "7fa973b8da300ea8ebbb6ff90f59ef760fcf9bfc" }
tokio-tungstenite = "0.28"
futures-util = "0.3"
anyhow = "1"
