[package]
name = "toni-actix"
version = "0.1.0"
edition = "2021"
description = "Actix-web adapter for the Toni framework"
license = "MIT"
keywords = ["toni", "actix", "actix-web", "web", "framework", "adapter"]
categories = ["web-programming::http-server"]

[dependencies]
toni = { path = "../toni" }
actix-web = "4"
anyhow = "1.0"
tracing = "0.1"
http = "1"
http-body-util = "0.1"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"
