[package]
name = "toni-axum"
version = "0.1.0"
edition = "2021"
description = "Axum adapter for the Toni framework"
license = "MIT"
keywords = ["toni", "axum", "web", "framework", "adapter"]
categories = ["web-programming::http-server"]

[dependencies]
toni = { path = "../toni" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
futures-util = "0.3"
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
