[package]
name = "toni-juniper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Juniper GraphQL integration for the Toni framework"
keywords = ["graphql", "juniper", "toni", "web", "framework"]
categories = ["web-programming", "asynchronous"]

[dependencies]
toni = { path = "../toni", version = "0.2.0" }
toni-macros = { path = "../toni-macros", version = "0.2.0" }
juniper = "0.16"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
toni-axum = { path = "../toni-axum", version = "0.1.0" }
tokio = { version = "1.47", features = ["full"] }
