[package]
name = "toni-macros"
version = "0.2.0"
edition = "2024"
description = "Macros for Toni"
license = "MIT"
repository = "https://github.com/monterxto/toni-rs"
homepage = "https://github.com/monterxto/toni-rs"
categories = ["asynchronous", "network-programming", "web-programming"]

[lib]
name = "toni_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
indexmap = "2.7.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.94", features = ["visit-mut", "default", "full"] }
