[package]
name = "toni-seaorm"
version = "0.1.0"
edition = "2024"
description = "SeaORM integration for the Toni framework"
license = "MIT"
repository = "https://github.com/monterxto/toni-rs"
homepage = "https://github.com/monterxto/toni-rs"

[features]
default = []
sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
runtime-tokio-rustls = ["sea-orm/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["sea-orm/runtime-tokio-native-tls"]

[dependencies]
toni = { path = "../toni" }
sea-orm = { version = "1", default-features = false }
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
