[package]
name = "toni-tcp"
version = "0.1.0"
edition = "2021"
description = "TCP transport adapter for the Toni RPC gateway"
license = "MIT"
keywords = ["toni", "tcp", "rpc", "framework", "adapter"]
categories = ["network-programming"]

[dependencies]
toni = { path = "../toni" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
