[package]
name = "toni"
version = "0.2.0"
edition = "2024"
keywords = ["http", "web", "framework"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Fast and modular web framework for scalable applications"
license = "MIT"
repository = "https://github.com/monterxto/toni-rs"
homepage = "https://github.com/monterxto/toni-rs"
readme = "README.md"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rustc-hash = "2.1"
anyhow = "1.0.95"
async-trait = "0.1.86"
validator = "0.20.0"
serde_urlencoded = "0.7"
toni-macros = { path = "../toni-macros" }

[dev-dependencies]
reqwest = { version = "0.12.11", features = ["json"] }
