[package]
name = "toni"
version = "0.2.0"
edition = "2024"
keywords = ["http", "web", "framework"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Fast and modular web framework for scalable applications"
license = "MIT"
repository = "https://github.com/monterxto/toni-rs"
homepage = "https://github.com/monterxto/toni-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rustc-hash = "2.1"
anyhow = "1.0.95"
async-trait = "0.1.86"
validator = "0.20.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
parking_lot = "0.12"
async-lock = "3"
futures = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
toni-macros = { path = "../toni-macros" }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.11", features = ["json"] }
